Fixed layout issues and added about section and removed blog section from navbar

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -115,7 +115,7 @@ header {
     height: 10%;
     padding: 0 2rem 0 2rem;
     min-height: fit-content;
-    background-color: #000;
+    background-color: #fff;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -154,8 +154,9 @@ a {
 }
 
 .ind-container {
-    padding: 0.6rem;
+    width: 30%;
     display: flex;
+    max-width: 430px;
     flex-direction: column;
     padding: 10px;
     gap: 15px;
